Fixed patients table name alignment

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -130,7 +130,8 @@ table td {
     text-align: center;
 }
 
-.patientTable {
+#patientsTable td:first-child,
+#patientsTable th:first-child {
     text-align: left;
 }
 
